--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "ip": "katyty.aternos.me",
-    "port": "56074",
-    "name": "kartik",
+    "ip": "ProjectOPMS.aternos.me",
+    "port": "53903",
+    "name": "ProjectOPMS",
     "password": "",
     "auto-night-skip": "false",
     "prefix": "",
