--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
     "ip": "ProjectOPMS.aternos.me",
     "port": "53903",
     "name": "ProjectOPMS",
-    "password": "",
+    "password": "1234",
     "auto-night-skip": "false",
-    "prefix": "",
+    "prefix": "!",
     "login-enabled": "false",
     "register-cmd": "/login kartikopp kartikopp",
     "login-cmd": "/login kartikopp",
